baculum: Add client property to object and objects endpoint
